# ata-everything-app

backend/: alembic.ini  pyproject.toml  tasks.db
backend/alembic/: env.py
backend/alembic/versions/: 112d7bfb36d9_add_created_at_to_task.py  1e49563b5aae_initial_migration.py  53d643d6448f_your_new_changes_description.py  5f02e12ac2eb_add_completed_column_to_tasks.py
backend/app/: .gitignore  main.py
backend/app/database/: __init__.py  __init__db.py  database.py  import_data.py  models.py  schemas.py
backend/app/routes/: tasks.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: page.tsx
frontend/app/goals/: page.tsx
frontend/src/components/: LatestNotes.tsx  MainContent.tsx  NoteInput.tsx  NoteTaker.tsx  Sidebar.tsx  TaskManager.tsx
frontend/src/components/goals/: GoalBox.tsx  GoalForm.tsx  index.ts
frontend/src/components/ui/: button.tsx  input.tsx  layout.tsx  scroll-area.tsx  textarea.tsx
frontend/src/components/ui/card/: Card.tsx  CardContent.tsx  CardHeader.tsx  CardTitle.tsx  index.ts
frontend/src/lib/: api.ts
frontend/src/pages/: GoalsPage.tsx
frontend/src/types/: goal.ts
